添加用于类检查和Java 11执行的脚本，更新.gitignore
 - 介绍了`check-classes.sh`用于检查Java课程和Spring Boot类。
  - 添加了`run-with-java11.sh`使用Java 11运行该应用程序。
   - 更新了.gitignore`以包含`.vscode/`目录。
    - 修改了.vscode/settings.json`将构建配置更新模式更改为“ Interactive”。
     - 更新了`pom.xml`将Java版本设置为11，并将Spring Boot版本降至2.7.17。
      - 删除与Hadoop和Hive有关的未使用条件类。
       - 调整了各种配置文件和类，以提高兼容性和功能。